# cocommand

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cocommand-Technical-Documentation.md  LICENSE  README.md  SPEC.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: run_server.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  e2e.rs  lib.rs  state.rs  window.rs  workspace_path.rs
crates/cocommand/: Cargo.toml
crates/cocommand-llm/: Cargo.toml
crates/cocommand-llm/src/: error.rs  kit.rs  lib.rs  message.rs  provider.rs  settings.rs  stream.rs  tool.rs
crates/cocommand-llm/src/kit/: adapter.rs  convert.rs  stream_map.rs  tool_map.rs
crates/cocommand/src/: application.rs  browser.rs  builtins.rs  bus.rs  clipboard.rs  command.rs  core.rs  error.rs  event.rs  events.rs  extension.rs  extensions.rs  lib.rs  llm.rs  message.rs  oauth.rs  permissions.rs  planner.rs  platform.rs  routing.rs  server.rs  session.rs  sessions.rs  storage.rs  tool.rs  tools.rs  types.rs  workspace.rs
crates/cocommand/src/agent/: context.rs  prompt.rs  session.rs
crates/cocommand/src/agent/prompt/: control.rs
crates/cocommand/src/application/: installed.rs  note.rs  registry.rs  screenshot.rs  system.rs
crates/cocommand/src/applications/: spotify.rs
crates/cocommand/src/applications/calendar/: script.rs
crates/cocommand/src/applications/reminders/: add.rs  cancel.rs
crates/cocommand/src/applications/spotify/: play_track.rs
crates/cocommand/src/builtins/: calculator.rs  clipboard.rs  notes.rs
crates/cocommand/src/command/: parser.rs  processor.rs  runtime.rs  session_message.rs  types.rs
crates/cocommand/src/command/runtime/: actor.rs  executor.rs  handle.rs  protocol.rs  registry.rs  tool_worker.rs  types.rs
crates/cocommand/src/command/runtime/actor/: handle.rs  helpers.rs  tests.rs  writes.rs
crates/cocommand/src/command/runtime/executor/: llm.rs  processor.rs  tests.rs  tool.rs  tool_processor.rs
crates/cocommand/src/commands/: intake.rs
crates/cocommand/src/events/: event.rs  redaction.rs  replay.rs  store.rs
crates/cocommand/src/extension/: application.rs  builtin.rs  custom.rs  host.rs  loader.rs  manifest.rs  registry.rs
crates/cocommand/src/extension/builtin/: agent.rs  browser.rs  browser_manifest.json  clipboard.rs  clipboard_manifest.json  editor.rs  filesystem.rs  manifest_tools.rs  note.rs  screenshot.rs  screenshot_manifest.json  system.rs  system_manifest.json  terminal.rs  web.rs  web_manifest.json  workspace.rs  workspace_manifest.json
crates/cocommand/src/extension/builtin/agent/: extension.rs  manifest.json  ops.rs  types.rs
crates/cocommand/src/extension/builtin/editor/: extension.rs  manifest.json  ops.rs  tests.rs
crates/cocommand/src/extension/builtin/filesystem/: extension.rs  icons.rs  manifest.json  ops.rs  platform.rs  tests.rs  types.rs
crates/cocommand/src/extension/builtin/note/: extension.rs  manifest.json  ops.rs  tests.rs  types.rs
crates/cocommand/src/extension/builtin/terminal/: extension.rs  manifest.json  ops.rs  (+1 more)
crates/cocommand/src/extensions/: lifecycle.rs  manifest.rs  rpc.rs
crates/cocommand/src/llm/: provider.rs  service.rs  tool_adapter.rs  tools.rs
crates/cocommand/src/message/: convert.rs  info.rs  message.rs  parts.rs
crates/cocommand/src/permissions/: enforcement.rs  risk.rs  scopes.rs  store.rs
crates/cocommand/src/planner/: llm_planner.rs  plan.rs  planner.rs  types.rs
crates/cocommand/src/platform/: adapters.rs  factory.rs  types.rs
crates/cocommand/src/platform/adapters/: macos.rs  portable.rs
crates/cocommand/src/routing/: metadata.rs  router.rs
crates/cocommand/src/server/: assets.rs  browser.rs  error.rs  events.rs  extension.rs  filesystem.rs  invoke.rs  notes.rs  oauth.rs  onboarding.rs  openapi.rs  screenshots.rs  session.rs  state.rs  system.rs  workspace.rs
crates/cocommand/src/session/: application_cache.rs  extension_cache.rs  manager.rs  session.rs
crates/cocommand/src/storage/: clipboard_store.rs  event_log.rs  file.rs  kv_store.rs  memory.rs  snapshot_store.rs  traits.rs  types.rs
crates/cocommand/src/tool/: activate_application.rs  activate_extension.rs  get_application.rs  get_extension.rs  registry.rs  search_application.rs  search_extensions.rs  tool.rs
crates/cocommand/src/tool/window/: close.rs  focus.rs  list_apps.rs  snapshot.rs
crates/cocommand/src/tools/: executor.rs  invocation.rs  registry.rs  schema.rs
crates/cocommand/src/utils/: time.rs
crates/cocommand/src/workspace/: application_cache.rs  config.rs  instance.rs  invariants.rs  kernel_tools.rs  patch.rs  setup.rs  state.rs  window_cache.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: cancel.rs  error.rs  fsevent.rs  index.rs  indexer.rs  lib.rs  query.rs  search.rs  slab.rs  storage.rs  types.rs  watcher.rs
crates/filesystem/src/index/: construct.rs  data.rs  file_nodes.rs  fswalk.rs  manager.rs  node_view.rs  persistence.rs  search.rs  shared.rs  walker.rs  watcher.rs
crates/filesystem/src/indexer/: build.rs  construct.rs  data.rs  file_nodes.rs  node_view.rs  persistence.rs  shared.rs  walk.rs
crates/filesystem/src/query/: content.rs  context.rs  date_filter.rs  evaluate.rs  expression.rs  highlight.rs  matcher.rs  optimizer.rs  parser.rs  path.rs  size.rs  text_match.rs  type_filter.rs
crates/filesystem/src/search/: engine.rs  manager.rs
crates/filesystem/src/slab/: index_types.rs  mmap.rs  node.rs  thin.rs
crates/filesystem/src/storage/: entry.rs  index_types.rs  namepool.rs  node.rs  slab.rs  thin.rs
crates/filesystem/src/watcher/: events.rs  file_tags.rs  fsevent.rs  walker.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: applescript.rs  application.rs  clipboard.rs  file_icon.rs  installed.rs  lib.rs  permissions.rs  screen.rs  screenshot.rs  util.rs  window.rs
crates/platform-macos/src/window/: actions.rs  ax.rs  discovery.rs  fallback.rs  mapping.rs  mod.rs  registry.rs
(+340 files in other folders)
