[package]
name = "cocommand-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras"] }
tracing = "0.1"
llm-kit-core = { path = "../../../ai-sdk/llm-kit-core" }
llm-kit-openai-compatible = { path = "../../../ai-sdk/llm-kit-openai-compatible" }
llm-kit-provider = { path = "../../../ai-sdk/llm-kit-provider" }
llm-kit-provider-utils = { path = "../../../ai-sdk/llm-kit-provider-utils" }
