[package]
name = "cocommand"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocommand-platform-macos = { path = "../platform-macos" }
[dev-dependencies]
tempfile = "3"
