[package]
name = "cocommand"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
filesystem = { path = "../filesystem" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "sync", "process", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
tracing = "0.1"
rayon = "1.10"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }
llm-kit-core = { path = "../../../ai-sdk/llm-kit-core" }
llm-kit-openai-compatible = { path = "../../../ai-sdk/llm-kit-openai-compatible" }
llm-kit-provider = { path = "../../../ai-sdk/llm-kit-provider" }
llm-kit-provider-utils = { path = "../../../ai-sdk/llm-kit-provider-utils" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
html2text = "0.14"
urlencoding = "2"
glob = "0.3"

[features]
default = []
swagger-ui = ["dep:utoipa-swagger-ui"]

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos = { path = "../platform-macos" }

[dev-dependencies]
tempfile = "3"
