[package]
name = "platform-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSImage", "NSBitmapImageRep", "NSGraphicsContext"] }
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSString", "NSData", "NSArray"] }
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
