[package]
name = "cocommand-desktop"
version = "0.1.0"
description = "CoCommand App"
authors = ["saribmahmood55@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
cocommand = { path = "../../../crates/cocommand" }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["time"] }
serde_json = "1"
env_logger = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
